# cq-engine

./: CLAUDE.md  LICENSE  README.md
benchmark/: README.md  spec.md
benchmark/measures/: context_health.md  decision_quality.md  document_integrity.md  evolution.md
cqlint/: README.md  cqlint.sh
cqlint/rules/: CQ001_budget_missing.md  CQ002_context_contamination.md  CQ003_generic_persona.md  CQ004_no_mutation_critical.md  CQ005_learning_disabled.md
cqlint/tests/fail/: agent_generic_persona.yaml  (+4 more)
docs/: roadmap.md
docs/phases/: phase-1-foundation.md  phase-2-mutadoc.md  phase-3-mcp-server.md  phase-4-thinktank.md  phase-5-ctl.md
mcp-server/: .mcp.json  README.md  __init__.py  pyproject.toml  server.py
mcp-server/hooks/: auto_learn.sh  auto_mutation.sh  cognitive_hygiene_check.sh
mcp-server/resources/: __init__.py  learned.py  patterns.py
mcp-server/telemetry/: __init__.py  collector.py
mcp-server/tools/: __init__.py  cqlint_tool.py  decompose.py  gate.py  learn.py  mutate.py  persona.py
mutadoc/: README.md  mutadoc.sh
mutadoc/personas/: adversarial_reader.md  naive_implementer.md  opposing_counsel.md
mutadoc/presets/: academic_paper.md  api_spec.md  contract.md  policy.md
mutadoc/repair/: README.md
mutadoc/strategies/: ambiguity.md  boundary.md  contradiction.md  deletion.md  inversion.md
patterns/: 01_attention_budget.md  02_context_gate.md  03_cognitive_profile.md  04_wave_scheduler.md  05_assumption_mutation.md  06_experience_distillation.md  07_file_based_io.md  08_template_driven_role.md  README.md
patterns/anti-patterns/: README.md
(+13 files in other folders)
