[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cq-engine-mcp"
version = "0.1.0"
description = "CQ Engine MCP Server — Cognitive Quality Engineering for LLM Agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
cq-engine-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
